[tool.poetry]
name = "form-amel"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
streamlit = "^0.66.0"
pandas = "^1.1.1"
numpy = "^1.19.1"
pymongo = "^3.11.0"
dnspython = "^2.0.0"
yagmail = "^0.11.224"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
